Ponteiro do cursor e identificação de campos inválidos
Adicionado classe para identificar o ponteiro como pointer nos menus e
também adicionado borda esquerda vermelha para os campos inválidos do
fomulário, exceto para o formulário inválido.

--- a/omaha-commerce/static/pages/index.html
+++ b/omaha-commerce/static/pages/index.html
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="dropdown" ng-show="ic.usuario.tipoUsuario === 'A'">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <a class="dropdown-toggle menu" data-toggle="dropdown">
                             Administração
                         </a>
                         <ul class="dropdown-menu dropdown-user">
@@ -55,7 +55,7 @@
                         </ul>
                     </li>
                     <li class="dropdown" ng-show="ic.usuario.tipoUsuario === 'P' || ic.usuario.tipoUsuario === 'A'">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <a class="dropdown-toggle menu" data-toggle="dropdown">
                             Cadastros
                         </a>
                         <ul class="dropdown-menu dropdown-user">
@@ -64,7 +64,7 @@
                         </ul>
                     </li>
                     <li class="dropdown" ng-show="ic.usuario.tipoUsuario === 'P' || ic.usuario.tipoUsuario === 'A'">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <a class="dropdown-toggle menu" data-toggle="dropdown">
                             Vendas
                         </a>
                         <ul class="dropdown-menu dropdown-user">
@@ -72,7 +72,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown">
+                        <a class="dropdown-toggle menu" data-toggle="dropdown">
                             Minha Conta
                         </a>
                         <ul class="dropdown-menu dropdown-user" ng-show="usuario">
